[package]
name = "util"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]

[dependencies]
# Pin to 1.0.150 to avoid serde_derive 1.0.163+ which pulls syn 2.0.x (requires rustc 1.71+)
serde        = "=1.0.150"
serde_derive = "=1.0.150"
bincode      = "1.0"
rustlearn    = "0.5.0"
lazy_static  = "1.3.0"
hashbrown    = "0.1.8"
