cargo-features = ["edition2021"]
[package]
name = "auth"
version = "0.1.0"
authors = ["Jacob Barzee <jmbarzee@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
sandstorm = { path = "../../sandstorm" }
rust-crypto = "0.2.36"
openssl = "=0.10.64"
openssl-sys = "=0.9.100"
backtrace = "=0.3.71"
